--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,9 @@
 	box-shadow: 4px 4px 20px 2px #C9C9C9;
 	margin:10px;
 	padding: 10px;
-	min-width: 400px;
+	min-width: 80%;
+	max-height: 80%;
+	overflow: auto;
 	float:left;
 	clear:both;
 }
